--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 USERNAME = 'YOUR_GITHUB_USERNAME'
 DATABASE_PATH = 'data/database.db'
-REPOIGNORE_PATH = 'data/.repoignore'
-ENV_PATH = 'data/.env'
+REPOIGNORE_PATH = '.repoignore'
+ENV_PATH = '.env'
